# erlang-ports-example

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum  rebar.config  rebar.config.script
.github/workflows/: cicd.yml  go.yml  rust.yml
apps/ports/priv/cl-port-examples/: README.md
apps/ports/priv/cl-port-examples/echo/: Makefile  erlang-echo.asd
apps/ports/priv/cl-ports-example/: LICENSE  Makefile  README.md
apps/ports/priv/cl-ports-example/erlang-echo/: erlang-echo-test.asd  erlang-echo.asd  erlang-echo.lisp  package.lisp
apps/ports/priv/port-example-rs/: Cargo.toml
apps/ports/priv/port-example-rs/tests/: basic_types.rs
apps/ports/priv/ports-example-rs/: Cargo.toml  LICENSE  Makefile  README.md
apps/ports/priv/ports-example-rs/src/: main.rs
apps/ports/priv/ports-example-rs/tests/: messages.rs
apps/ports/src/: go-echo-server.lfe  go_echo_server.erl  lisp-echo-server.lfe  lisp_echo_server.erl  ports-app.lfe  ports-sup.lfe  ports.app.src  ports_app.erl  ports_sup.erl  util.erl  util.lfe
apps/ports/src/ports/: app.lfe  supervisor.lfe  util.lfe
apps/ports/src/ports/go/: server.lfe
apps/ports/src/ports/lisp/: server.lfe
cmd/echo/: main.go
config/: sys.config  vm.args
echo/: erlang-echo-test.asd
echo/src/: echo-const.lisp  echo-messaging.lisp  echo-util.lisp  echo.lisp  main.lisp
echo/tests/: echo.lisp
internal/app/: version.go
pkg/port/: protocol.go
src/: lib.rs  main.rs  util.rs
src/commands/: echo.rs  mod.rs
src/port/: messages.rs  mod.rs  protocol.rs
tests/: messages.rs  util.rs
(+19 files in other folders)
