[package]
name = "erlang-port-examples"
description = "Example Rust applications that communicate with Erlang/OTP applications via Erlang Ports"
readme = "README.md"
version = "0.1.0"
license = "BSD"
authors = ["Duncan McGreggor <oubiwann@gmail.com>"]
repository = "https://github.com/oxur/erlang-port-examples"
documentation = "https://docs.rs/erlang-port-examples/"
exclude = ["/.github", "/resources", ".gitignore"]
edition = "2018"

[lib]
name = "erlang_ports_rs"

[dependencies]
eetf = "0.4"
log = "0.4.8"
twyg = "0.1.7"
